ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  namespace: wsc2024
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: wsc2024-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /v1/customer
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 8080
      - path: /v1/product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /v1/order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8080
